# gamedevbench

./: .env.example  .gitattributes  .gitignore  README.md  benchmark_tasks.yaml  pyproject.toml  tasks.yaml  test_task.yaml  unzip_tasks.sh
gamedevbench/src/: base_solver.py  benchmark_runner.py  claude_code_solver.py  codex_solver.py  gemini_solver.py  mcp_server.py  mini_swe_solver.py  openhands_solver.py  solver_factory.py
gamedevbench/src/utils/: constants.py  data_types.py  prompts.py  validation.py
